<resources>
    <string name="app_name">BJAPSubmission1</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="now_showing">Now Showing</string>
</resources>